fix(review): correct infra parent POMs, fix StatsClient NPE and exception, remove config-server discovery property